--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    != css('dc')
+
+    != js('d3')
+    != js('crossfilter')
+    != js('dc')
